--- a/app/views/session/new.html.erb
+++ b/app/views/session/new.html.erb
@@ -1,11 +1,7 @@
-<h3>Sign In</h3>
-
-<div id="user-form">
-	<%= render partial: "users/form", locals: {user: @user, button: "Log In"} %>
+<div class="form-box">
+	<div id="user-form">
+		<%= render partial: "users/form", locals: { user: @user, button: "Log In" } %>
+	</div>
 </div>
 
-<p>New user? <%= link_to "Sign Up", signup_path %></p>
 
-<div id="invalid-cred">
-	<%= render partial: "session/invalid" %>
-</div>
