--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,19 +1,26 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>IChat</title>
+    <title>ArcaneChats</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
+	
+	<%= stylesheet_link_tag "https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"  %>
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
   </head>
 
   <body>
-  	<% if flash[:notice] %>
-	  <p><%= flash[:notice] %></p>
-	<% end %>
-    <%= yield %>
+	<div class='main'>
+		<%= render partial: "users/nav", locals: {title: @title}%>
+		
+		<div class="contents">
+			<% if flash[:notice] %>
+				<p class="flash"><%= flash[:notice] %></p>
+			<% end %>
+    		<%= yield %>
+		</div>
+	</div>
   </body>
 </html>
