--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -11,7 +11,7 @@
 </div>
 
 <div class="msging-box">
-	<div class="msg-form">
+	<div class="msg-form" data-controller="prevent">
 		<% if @blocked %>
 			<div class="blocked-msg">This conversation has been blocked</div>
 		<% else %>
