--- a/app/views/users/_users.html.erb
+++ b/app/views/users/_users.html.erb
@@ -4,9 +4,8 @@
 			<div class="user-box">
 				<div class="index-user-name"><%= user.name %></div>
 				<% if message = last_message(user.id) %>
-					<% if message %>
-						<% new = @seens.detect{ _1.other_user_id == user.id}.last_seen < message.created_at %>
-					<% end %>
+					<%= pp @seens, user.id, @seens.detect{ _1.other_user_id == user.id}  %>
+					<% new = @seens.detect{ _1.other_user_id == user.id}.last_seen < message.created_at %>
 					<div class="last-message <%= "new-msg" if new %>">
 						<span class="last-msg-user"><%= user_name(message.user_id) %></span>: <span class="msg-content"><%= message.content.truncate(25) %></span>
 						<div class="last-msg-time"><%= message.created_at.in_time_zone('Chennai').strftime "%l:%M %p" %></div>
